2010-07-04  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Avoid == in test command, it's not portable.
	* util/grub.d/30_os-prober.in: Likewise.

2010-07-04  Colin Watson  <cjwatson@ubuntu.com>

	* kern/emu/getroot.c [__GNU__]: Include <sys/mman.h> for munmap.

2010-07-04  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/i386/pc/grub-setup.c (setup): Do not embed when there are
	multiple (top-level) partmaps.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/i386/efi/grub-install.in: Don't use empty grub_device.
	Reported by: Tito Keitel.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Bidi and diacritics support.

	* Makefile.in (widthspec.bin): New target.
	(widthspec.h): Likewise.
	(TARGET_CFLAGS): Add -DHAVE_UNIFONT_WIDTHSPEC=1 if font was available.
	* autogen.sh: Generate unidata.c.
	* commands/cat.c (grub_cmd_cat): Don't use grub_putchar.
	* commands/ls.c (grub_ls_list_devices): Likewise.
	(grub_ls_list_files): Likewise.
	* commands/minicmd.c (grub_mini_cmd_cat): Likewise.
	(grub_mini_cmd_lsmod): Likewise.
	* commands/read.c: Likewise.
	* kern/corecmd.c (grub_core_cmd_ls): Likewise.
	* kern/rescue_reader.c (grub_rescue_read_line): Likewise.
	* lib/arg.c (grub_arg_show_help): Likewise.
	* lib/crypto.c (grub_password_get): Likewise.
	* normal/auth.c (grub_username_get): Likewise.
	* normal/misc.c (grub_normal_print_device_info): Likewise.
	* commands/help.c (grub_cmd_help): Use grub_unicode_aglomerate_comb.
	* conf/common.rmk (grub_mkfont_SOURCES): Add unidata.c.
	(gfxmenu_mod_SOURCES): Add gfxmenu/font.c.
	(normal/charset.c_DEPENDENCIES): New variable.
	(normal_mod_SOURCES): Add normal/charset.c and unidata.c.
	(pkglib_MODULES): Remove charset.mod.
	(charset_mod_SOURCES): Removed.
	(charset_mod_CFLAGS): Likewise.
	(charset_mod_LDFLAGS): Likewise.
	(pkglib_MODULES) [ieee1275]: Remove terminfo.mod.
	* conf/powerpc-ieee1275.rmk (kernel_img_SOURCES): Add term/terminfo.c
	and term/tparm.c.